--- a/chess.html
+++ b/chess.html
@@ -1,3 +1,44 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>Chess</title>
+        <link rel="stylesheet" href="styles/chessboard.css">
+    </head>
+    <body>
+        <div class="chessboard">
+            <div style="
+                width: 30px;
+                height: 30px;
+                background-color: green; ">
+            </div>
 
+            <div class="square dark b8">
+                b8
+            </div>
+
+            <div class ="square" class ="light" class ="c8">
+                c8
+            </div>
+
+            <div class ="square" class ="dark" class ="d8">
+                d8</div>
+
+            <div class ="square" class ="light" class ="e8">
+                e8
+            </div>
+
+            <div class ="square" class ="dark" class ="f8">
+                f8
+            </div>
+            
+            <div class ="square" class ="light" class ="g8">
+                g8
+            </div>
+
+            <div class ="square" class ="dark" class ="h8">
+                h8
+            </div>
+        </div>
+    </body>
+</html>
 
