added piece movement

--- a/test/test.html
+++ b/test/test.html
@@ -6,9 +6,7 @@
     <body>
         <div style="background-color:blue">e</div>
         <script>
-            if("guh"){
-                console.log("guh");
-            }
+            console.log('a'.charCodeAt(0));
         </script>
     </body>
 </html>
