split all the functions dealing with move validity into its own js file

--- a/chess.html
+++ b/chess.html
@@ -272,7 +272,7 @@
             </div>
         </div>
 
-        <script src = "javascript/chess.js">
+        <script type="module" src = "javascript/chess.js">
         </script>
     </body>
 </html>
