added willNotBeInCheck() function to check if after move you will be in check, which is illegal and combined all the movevalidity functions

--- a/test/test.html
+++ b/test/test.html
@@ -6,7 +6,13 @@
     <body>
         <div style="background-color:blue">e</div>
         <script>
-            console.log('a'.charCodeAt(0));
+            let x;
+            if( a = x){
+                console.log("guh");
+            }
+            else{
+                console.log("wpeorij");
+            }
         </script>
     </body>
 </html>
