--- a/chess.html
+++ b/chess.html
@@ -272,8 +272,9 @@
             </div>
         </div>
 
-        <script type="module" src = "javascript/chess.js">
-        </script>
+
+        <script type="module" src="javascript/execute-move.js"></script>
+        <script type="module" src="javascript/chess.js"></script>
     </body>
 </html>
 
