starting adding aesthetical features (like square highlighting after movement)

--- a/chess.html
+++ b/chess.html
@@ -275,6 +275,7 @@
 
         <script type="module" src="javascript/execute-move.js"></script>
         <script type="module" src="javascript/chess.js"></script>
+        <script type="module" src="javascript/aesthetics.js"></script>
     </body>
 </html>
 
