created a separate folder to create move history (hopefully display live move kind of like chess.com)

--- a/chess.html
+++ b/chess.html
@@ -273,8 +273,8 @@
         </div>
 
 
-        <script type="module" src="javascript/execute-move.js"></script>
-        <script type="module" src="javascript/chess.js"></script>
+        <script type="module" src="javascript/chessboard/execute-move.js"></script>
+        <script type="module" src="javascript/chessboard/chess.js"></script>
     </body>
 </html>
 
