--- a/test/test.html
+++ b/test/test.html
@@ -7,14 +7,7 @@
         <div style="background-color:blue">e</div>
         <script>
             let x = {};
-            x.a = 'guh';
-            console.log(x);
-            function del(obj){
-                delete obj['a'];
-                obj['b'] = 'guh';
-                console.log(x);
-            }
-            del(x);
+            console.log(x['lasga']);
         </script>
     </body>
 </html>
