added castling which took a HELLA time (document all problems in trello); also split up the movePiece function into move and movePiece since we always gotta account for castling and also added notation for castling

--- a/test/test.html
+++ b/test/test.html
@@ -6,8 +6,18 @@
     <body>
         <div style="background-color:blue">e</div>
         <script>
-            let x = {};
-            console.log(x['lasga']);
+             function second(){
+                console.log("shit");
+            }
+
+            function first(){
+                second();
+            }
+
+            
+
+            first();
+           
         </script>
     </body>
 </html>
