created a functioning timer

--- a/chess.html
+++ b/chess.html
@@ -294,7 +294,7 @@
         </div>
 
 
-
+        <script type="module" src="javascript/timer/timer.js"></script>
         <script type="module" src="javascript/chessboard/execute-move.js"></script>
         <script type="module" src="javascript/chessboard/chess.js"></script>
     </body>
