--- a/test/test.html
+++ b/test/test.html
@@ -5,19 +5,7 @@
     </head>
     <body>
         <div style="background-color:blue">e</div>
-        <script>
-             function second(){
-                console.log("shit");
-            }
-
-            function first(){
-                second();
-            }
-
-            
-
-            first();
-           
-        </script>
+        <script></script>
+        <script type="module" src="1.js"> </script>
     </body>
 </html>
