created checkmate features!

--- a/chess.html
+++ b/chess.html
@@ -297,6 +297,7 @@
         <script type="module" src="javascript/timer/timer.js"></script>
         <script type="module" src="javascript/chessboard/execute-move.js"></script>
         <script type="module" src="javascript/chessboard/chess.js"></script>
+        <script type="module" src="javascript/notation/notation-history.js"></script>
     </body>
 </html>
 
