added some styles to timer

--- a/chess.html
+++ b/chess.html
@@ -4,6 +4,8 @@
         <title>Chess</title>
         <link rel="stylesheet" href="styles/chessboard.css">
         <link rel="stylesheet" href="styles/pieces.css">
+        <link rel="stylesheet" href="styles/timer-movelist-gameoptions.css">
+
     </head>
     <body>
         <div class="board-container">
